--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "immutability-helper": "^3.0.1",
     "preact": "^10.0.5",
+    "preact-router": "^3.1.0",
     "tailwindcss": "^1.1.3"
   }
 }
