--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "author": "Andreas Remdt",
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.7.2",
+    "@babel/plugin-proposal-class-properties": "^7.7.0",
     "parcel-bundler": "^1.12.4"
   },
   "dependencies": {
