--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "prebuild": "rm -rf dist",
-    "dev": "parcel index.html",
+    "dev": "parcel serve index.html",
     "start": "serve -s dist/",
     "build": "parcel build index.html"
   },
