--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@babel/core": "^7.7.2",
     "@babel/plugin-proposal-class-properties": "^7.7.0",
     "@fullhuman/postcss-purgecss": "^1.3.0",
-    "parcel-bundler": "^1.12.4"
+    "parcel-bundler": "^1.12.4",
+    "sass": "^1.23.7"
   },
   "dependencies": {
     "immutability-helper": "^3.0.1",
